tests/ui/tests/name-resolution/mistyped-namespace.stderr
error[E022]: value `true-treasures-of-life` is not a namespace
 --> ${DIRECTORY}/name-resolution/mistyped-namespace.lushui:7:5
  |
7 | use true-treasures-of-life.Friendship
  |     ^^^^^^^^^^^^^^^^^^^^^^ not a namespace, just a value
  |
 --> ${DIRECTORY}/name-resolution/mistyped-namespace.lushui:7:28
  |
7 | use true-treasures-of-life.Friendship
  |                            ---------- requires the preceeding path segment to refer to a namespace
  |
 help: a namespace with a similar name containing the binding exists in scope:
           `the-true-treasures-of-life`

error[E022]: value `shared-spades` is not a namespace
  --> ${DIRECTORY}/name-resolution/mistyped-namespace.lushui:23:5
   |
23 | use shared-spades.One
   |     ^^^^^^^^^^^^^ not a namespace, just a value
   |
  --> ${DIRECTORY}/name-resolution/mistyped-namespace.lushui:23:19
   |
23 | use shared-spades.One
   |                   --- requires the preceeding path segment to refer to a namespace
   |
  help: a namespace with a similar name containing the binding exists in scope:
            `shared-spaces` (shared-spadces)

error: aborting due to 2 previous errors
 note: the error E022 has a detailed explanation
 help: run `lushui explain E022` to view it

